refactore and rename